[gd_scene load_steps=32 format=3 uid="uid://8p4d00m7piuj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_s33bl"]
[ext_resource type="Texture2D" uid="uid://cea673ywojf57" path="res://SpritePlayer/Sleeping (32 x 32).png" id="2_udb4d"]
[ext_resource type="FontFile" uid="uid://dw0byh6cpwq4u" path="res://font/PressStart2P.ttf" id="2_vvgwu"]
[ext_resource type="Texture2D" uid="uid://bw2yq82xameop" path="res://SpritePlayer/Idle_Poses (32 x 32).png" id="2_wmabh"]
[ext_resource type="Texture2D" uid="uid://b3niptgrc8bbx" path="res://SpritePlayer/Jumping (32 x 32).png" id="3_365bh"]
[ext_resource type="Texture2D" uid="uid://ov63sscpleq3" path="res://SpritePlayer/Running (32 x 32).png" id="4_3h34d"]
[ext_resource type="Texture2D" uid="uid://co4ug0cr2fhs" path="res://SpritePlayer/Kick (32 x 32).png" id="4_n5ypd"]
[ext_resource type="Texture2D" uid="uid://dt4385raw60pa" path="res://assets/Mini FX, Items & UI/Common Pick-ups/Coin (16 x 16).png" id="8_c8xmx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5m2s4"]
atlas = ExtResource("2_udb4d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jexxj"]
atlas = ExtResource("2_wmabh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mevfq"]
atlas = ExtResource("2_wmabh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46mui"]
atlas = ExtResource("2_wmabh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_seasi"]
atlas = ExtResource("2_wmabh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pidiy"]
atlas = ExtResource("3_365bh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pmic"]
atlas = ExtResource("4_3h34d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfwuc"]
atlas = ExtResource("4_3h34d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5qwi"]
atlas = ExtResource("4_3h34d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kcx5"]
atlas = ExtResource("4_3h34d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p4gs"]
atlas = ExtResource("4_3h34d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhguf"]
atlas = ExtResource("4_3h34d")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4843o"]
atlas = ExtResource("4_3h34d")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_syc68"]
atlas = ExtResource("4_3h34d")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp3dj"]
atlas = ExtResource("4_n5ypd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nru34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m2s4")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jexxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mevfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46mui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seasi")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pidiy")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pmic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfwuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5qwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kcx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p4gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhguf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4843o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syc68")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp3dj")
}],
"loop": false,
"name": &"spell",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlkdh"]
size = Vector2(11, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1ffm"]
size = Vector2(15, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t8yl"]
atlas = ExtResource("8_c8xmx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ih3w"]
atlas = ExtResource("8_c8xmx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_khqd7"]
atlas = ExtResource("8_c8xmx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk0wk"]
atlas = ExtResource("8_c8xmx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_307l7"]
animations = [{
"frames": [],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_0t8yl")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_8ih3w")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_khqd7")
}, {
"duration": 0.3,
"texture": SubResource("AtlasTexture_hk0wk")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="player" type="CharacterBody2D"]
collision_mask = 134
script = ExtResource("1_s33bl")

[node name="moedas_num" type="Label" parent="."]
modulate = Color(0.8, 0, 0, 1)
self_modulate = Color(1, 0.384314, 0.454902, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -21.0
offset_right = -2.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vvgwu")
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -3)
sprite_frames = SubResource("SpriteFrames_nru34")
animation = &"idle"
autoplay = "idle"

[node name="spell_point" type="Marker2D" parent="."]
position = Vector2(9, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_qlkdh")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 1036

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_n1ffm")
debug_color = Color(0.556863, 0.0117647, 0.121569, 0.419608)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="moeda_recarga" type="Timer" parent="."]
wait_time = 0.8

[node name="animCoin" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
position = Vector2(-21, -18)
scale = Vector2(0.4375, 0.4375)
sprite_frames = SubResource("SpriteFrames_307l7")
autoplay = "default"
frame_progress = 0.442302

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="moeda_recarga" to="." method="_on_moeda_recarga_timeout"]
